                      sagetv-for-plexmediacenter
                              ChangeLog

2015-11-06  Raymond Chi <raychi@gmail.com>

  * Implemented two way sync in sageplex_sync tool.
      - using normalized watch status representation to simplify code
        and handle corner cases better.

2015-10-15  Raymond Chi <raychi@gmail.com>

  * Fixed Agent issue when show/PeopleListInShow have no data.

2015-08-11  Raymond Chi <raychi@gmail.com>

  * Updated installer to set SAGEPLEX_CFG env var on Windows.
      - handles customized PLEX data location

2015-06-16  Raymond Chi <raychi@gmail.com>

  * Added Installer for Windows/MacOS/Linux.
  * Detect customized PLEX data location.
  * Pass SageTV/PLEX dir location to installer.

2015-06-07  Raymond Chi <raychi@gmail.com>

  * fixed CFG path issue when running on linux

2015-05-22  Raymond Chi <raychi@gmail.com>

  * rewrote multi-segment handling code in tv scanner
  * added multi-segment support to movie scanner

2015-05-06  Raymond Chi <raychi@gmail.com>

  * set a more intelligent episode no if one is not available.
  * Skip setting resume pos if within 5% of ending.
  * Added option to add/delete/refresh library to sync tool.
      - To bypass a PLEX web UI bug for adding library

2015-04-27  Raymond Chi <raychi@gmail.com>

  * Set resume position in PLEX video during Agent scan.
  * Added sageplex_sync tool to sync watch status independently
      - standalone tool to synchronize watched/resume status
      - both python and win32 packaged binary provided
  * Tested on Mac. Works, no code changes required.

2015-04-10  Raymond Chi <raychi@gmail.com>

  * Fixed movie detection in both scanners.
      - TV scanner will now skip recorded movies.
      - Movie scanner will only pull in recorded movies.
      - Both will still only pull in recorded contents.
  * Rotate scanner logs when size exceeds certain limit.

2015-04-06  Raymond Chi <raychi@gmail.com>

  * general code cleanup on all files