@@ -8,7 +8,7 @@ SRC_DIR = src
 BUILD_DIR = build
 STAGE_DIR = $(BUILD_DIR)/stage
 
-REL_VERSION   = 8.3.0
+REL_VERSION   = 8.3.1
 REL_PHASE     = beta
 
 SCANNER_TV    = $(STAGE_DIR)/plex/Scanners/Series
